Fixed h2 sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ img {
   .logo {
     margin-top: 50px;
   }
+
+  h2 {
+    font-size: 30px;
+  }
 }
 
 @media (min-width:961px) {
@@ -73,6 +77,10 @@ img {
   .logo {
     margin-top: 100px;
   }
+
+  h2 {
+    font-size: 40px;
+  }
 }
 
 @media (min-width:1980px) {
@@ -82,6 +90,10 @@ img {
 
   .logo {
     margin-top: 200px;
+  }
+
+  h2 {
+    font-size: 50px;
   }
 }
 
